--- a/bams-backend/public/.htaccess
+++ b/bams-backend/public/.htaccess
@@ -1,9 +1,9 @@
 RewriteEngine On
 
-# Serve existing files directly
+# Serve existing files/directories as-is
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Route all /api/* to index.php
-RewriteRule ^api/.* index.php [L,QSA]
+# Route everything else to index.php
+RewriteRule ^ index.php [L]
